# Tasks-in-C

./: README.md
Dynamiczny stos/: CMakeLists.txt  main.c  makefile  stack.c  stack.h  tested_declarations.h  unit_test_v2.c
Działania pisemne/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
Licznik słów/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
Lista dwukierunkowa/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
My printf oraz scanf/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
Ukryta wiadomość/: CMakeLists.txt  main.c
